src/client/sass/feed.scss
@import 'util';

content {
  display: flex;
  position: relative;

  .left,
  .right {
    flex: 1;
  }

  .feed {
    position: relative;
    width: 450px;
  }
}

.trending {
  float: left;
  position: sticky;
  margin-top: 64px;
  top: 64px;
  left: 64px;
  user-select: none;

  h1 {
    margin: 0;
    color: $color-primary;
  }

  hr {
    margin: 12px 0 12px -8px;
    height: 2px;
    width: 100px;
    background-color: rgba($color-primary, 0.5);
    border-radius: 2px;
    border: none;
  }

  .list {
    padding: 0 0 0 8px;
  }

  &.search .item {
    margin: 12px 0 0 0;
    padding-left: 0;
    height: 42px;

    &:hover {
      &.tag p {
        color: $color-primary;
      }
    }

    &.tag p {
      color: $color-dark;
    }
  }
}

.feed .search-visual {
  margin: (32px + 16px) 0;

  h1 {
    margin: 0;
    color: $color-primary;
  }

  p {
    margin: 16px 0 0 0;
    font-family: $font-family-body;
    font-size: 0.7rem;
    color: $color-dark;
    word-wrap: break-word;
  }
}

.feed-button-holder {
  display: flex;
  justify-content: center;
  margin: 32px 0 0 0;

  .button-small {
    display: flex;
    align-items: center;
    margin: 0 10px;
    padding: 2px 12px 2px 6px;
    height: auto;
    width: auto;
    text-decoration: none;
    border-color: $color-dimgray;

    &.active {
      background-color: $color-primary;
      border-color: $color-primary;
      color: $color-white;
    }

    &.newest {
      padding-left: 4px;
    }

    &:hover {
      border-color: $color-primary;
    }

    .mdi {
      position: relative;
      margin-right: 8px;
      width: 16px;
    }
  }
}

@media screen and (max-width: 1000px) {
  content {
    flex-direction: column;

    .right {
      display: none;
    }

    .feed {
      flex: 1;
      width: auto;
    }

    .trending {
      display: none;
    }
  }

  .feed .search-visual {
    margin-left: auto;
    margin-right: auto;
    width: 450px;
  }
}

@media screen and (max-width: 600px) {
  body {
    background-color: $color-gray;
  }
  .feed .search-visual {
    padding-right: 32px;
    padding-left: 32px;
    width: 100%;
  }

  .post {
    @include shadow;
  }
}

